# mqt-predictor

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.bib  MANIFEST.in  README.md  application_aware_compilation.py  big_1.json  big_data_new_flow_server.json  decision_tree_classifier.joblib  eval.ipynb  evaluation_helper.py  ionq_calibration.json  json_data.json  json_data_1000.json  json_data_big.json  json_data_big_server.json  json_data_bigger.json  json_data_bigger_server.json  json_new_scheme_server_1000.json  mqt_analyzer.ipynb  mqt_predictor.ipynb  mypy.ini  names_list.npy  non_zero_indices.npy  noxfile.py  oqc_lucy.csv  oqc_lucy.xlsx  oqc_lucy_calibration.json  oqc_lucy_fid.xlsx  paper.ipynb  pyproject.toml  quantum_generative_modeling.py  quantumcircuit.py  quark.py  requirements.txt  rigetti_m1.xlsx  rigetti_m1_calibration.json  scores_list.npy  setup.py  (+1 more)
.github/: codecov.yml  contributing.rst  dependabot.yml  release-drafter.yml  renovate.json5  support.rst
.github/workflows/: bugfix.yml  cd.yml  (+9 more)
archiv/: compiler_test.ipynb
docs/: Compilation.rst  DevelopmentGuide.rst  DeviceSelection.rst  FigureOfMerit.rst  Publications.rst  Quickstart.ipynb  References.rst  Usage.rst  conf.py  index.rst  refs.bib
evaluations/: evaluation_application_aware_compilation.ipynb  overall_evaluation.ipynb
evaluator/: driver.py  eval.py  evaluator.py  pytket_plugin.py  pytket_pluging.py  qiskit_plugin.py  utils.py
notebooks/: evaluation.ipynb  example.ipynb  mqt_predictor.ipynb  mqt_predictor_ML.ipynb  runtime_comparison.ipynb  runtime_comparison_ML.ipynb
predictor/: driver.py
qasm_compiled/: ae_indep_10_ibm_montreal_qiskit_opt_2_2.qasm  ae_indep_10_ibm_montreal_qiskit_opt_3_7.qasm  ae_indep_10_ibm_montreal_tket_lineplacement_True_12.qasm  ae_indep_10_ibm_washington_qiskit_opt_2_1.qasm  ae_indep_10_ibm_washington_qiskit_opt_3_6.qasm  ae_indep_10_ibm_washington_tket_lineplacement_False_15.qasm  ae_indep_10_ibm_washington_tket_lineplacement_True_11.qasm  ae_indep_10_ionq_qiskit_opt_2_0.qasm  ae_indep_10_ionq_qiskit_opt_3_5.qasm  ae_indep_10_rigetti_qiskit_opt_2_3.qasm  ae_indep_10_rigetti_qiskit_opt_3_8.qasm  ae_indep_11_ibm_montreal_qiskit_opt_2_2.qasm  ae_indep_11_ibm_montreal_qiskit_opt_3_7.qasm  ae_indep_11_ibm_montreal_tket_lineplacement_False_16.qasm  ae_indep_11_ibm_washington_qiskit_opt_2_1.qasm  ae_indep_11_ibm_washington_qiskit_opt_3_6.qasm  ae_indep_11_ibm_washington_tket_lineplacement_True_11.qasm  ae_indep_11_ionq_qiskit_opt_2_0.qasm  ae_indep_11_ionq_tket_10.qasm  ae_indep_11_rigetti_qiskit_opt_2_3.qasm  ae_indep_11_rigetti_qiskit_opt_3_8.qasm  ae_indep_12_ibm_montreal_qiskit_opt_2_2.qasm  ae_indep_12_ibm_montreal_qiskit_opt_3_7.qasm  ae_indep_12_ibm_washington_qiskit_opt_2_1.qasm  ae_indep_12_ibm_washington_qiskit_opt_3_6.qasm  ae_indep_12_ibm_washington_tket_lineplacement_False_15.qasm  ae_indep_12_rigetti_qiskit_opt_2_3.qasm  ae_indep_12_rigetti_qiskit_opt_3_8.qasm  ae_indep_12_rigetti_tket_lineplacement_False_17.qasm  ae_indep_13_ibm_montreal_qiskit_opt_2_2.qasm  ae_indep_13_ibm_montreal_qiskit_opt_3_7.qasm  ae_indep_13_ibm_montreal_tket_lineplacement_False_16.qasm  ae_indep_13_ibm_montreal_tket_lineplacement_True_12.qasm  ae_indep_13_ibm_washington_qiskit_opt_2_1.qasm  ae_indep_13_ibm_washington_qiskit_opt_3_6.qasm  ae_indep_13_ibm_washington_tket_lineplacement_False_15.qasm  ae_indep_13_ibm_washington_tket_lineplacement_True_11.qasm  ae_indep_13_rigetti_qiskit_opt_2_3.qasm  ae_indep_13_rigetti_qiskit_opt_3_8.qasm  ae_indep_13_rigetti_tket_lineplacement_True_13.qasm  (+10864 more)
results/: mqt_predictor_10_qubits_2024-03-06_14-40-20.txt  mqt_predictor_4_qubits_2024-03-04_16-48-57.txt  mqt_predictor_6_qubits_2024-03-04_16-49-07.txt  mqt_predictor_8_qubits_2024-03-05_16-49-04.txt  mqt_predictor_8_qubits_2024-03-14_07-19-40.txt
test_compiled_target/: ae_indep_10_ibm_montreal_qiskit_opt_2_2.qasm  ae_indep_10_ibm_montreal_qiskit_opt_3_7.qasm  ae_indep_10_ibm_montreal_tket_lineplacement_False_16.qasm  ae_indep_10_ibm_washington_qiskit_opt_2_1.qasm  ae_indep_10_ibm_washington_qiskit_opt_3_6.qasm  ae_indep_10_ionq_tket_10.qasm  ae_indep_10_rigetti_qiskit_opt_2_3.qasm  ae_indep_10_rigetti_qiskit_opt_3_8.qasm  ae_indep_10_rigetti_tket_lineplacement_False_17.qasm  ae_indep_10_rigetti_tket_lineplacement_True_13.qasm  ae_indep_11_ibm_montreal_qiskit_opt_2_2.qasm  ae_indep_11_ibm_montreal_qiskit_opt_3_7.qasm  ae_indep_11_ibm_montreal_tket_lineplacement_True_12.qasm  ae_indep_11_ibm_washington_qiskit_opt_2_1.qasm  ae_indep_11_ibm_washington_qiskit_opt_3_6.qasm  ae_indep_11_ibm_washington_tket_lineplacement_False_15.qasm  ae_indep_11_ionq_qiskit_opt_3_5.qasm  ae_indep_11_rigetti_qiskit_opt_2_3.qasm  ae_indep_11_rigetti_qiskit_opt_3_8.qasm  ae_indep_11_rigetti_tket_lineplacement_False_17.qasm  ae_indep_11_rigetti_tket_lineplacement_True_13.qasm  ae_indep_12_ibm_montreal_qiskit_opt_2_2.qasm  ae_indep_12_ibm_montreal_qiskit_opt_3_7.qasm  ae_indep_12_ibm_montreal_tket_lineplacement_False_16.qasm  ae_indep_12_ibm_montreal_tket_lineplacement_True_12.qasm  ae_indep_12_ibm_washington_qiskit_opt_2_1.qasm  ae_indep_12_ibm_washington_qiskit_opt_3_6.qasm  ae_indep_12_ibm_washington_tket_lineplacement_True_11.qasm  ae_indep_12_rigetti_qiskit_opt_2_3.qasm  ae_indep_12_rigetti_qiskit_opt_3_8.qasm  ae_indep_12_rigetti_tket_lineplacement_True_13.qasm  ae_indep_13_ibm_montreal_qiskit_opt_2_2.qasm  ae_indep_13_ibm_montreal_qiskit_opt_3_7.qasm  ae_indep_13_ibm_washington_qiskit_opt_2_1.qasm  ae_indep_13_ibm_washington_qiskit_opt_3_6.qasm  ae_indep_13_rigetti_qiskit_opt_2_3.qasm  ae_indep_13_rigetti_qiskit_opt_3_8.qasm  ae_indep_13_rigetti_tket_lineplacement_False_17.qasm  ae_indep_14_ibm_montreal_qiskit_opt_2_2.qasm  ae_indep_14_ibm_montreal_qiskit_opt_3_7.qasm  (+141 more)
tests/: __init__.py  test_ML_helper.py  test_ML_predictor.py  test_ML_utils.py  test_RL_predictor.py  test_RL_utils.py  test_calibration.py  test_driver.py  test_eval.py  test_evaluation.py  test_pretrained_models.py  test_quantum_generative_modeling.py  test_result.py  test_reward.py  test_runner.py  test_utils.py
zenodo/: evaluation.ipynb
(+153 files in other folders)
